seems to work with everything updated

--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -133,6 +133,8 @@ const concluded = +new Date(events[events.length - 1].date) < +new Date();
   </table>
 
   <style>
+    @reference "tailwindcss";
+
     .td-class {
       @apply border-0 px-4 py-3 first:rounded-t-lg last:rounded-b-lg sm:first:rounded-t-none sm:first:rounded-bl-lg sm:first:rounded-tl-lg sm:last:rounded-b-none sm:last:rounded-br-lg sm:last:rounded-tr-lg;
     }
