--- a/src/components/DueDate.astro
+++ b/src/components/DueDate.astro
@@ -8,7 +8,7 @@ import {
 interface Props {
   relativeDate: {
     week: number;
-    day: number;
+    day: number | string;
     time: string;
   };
   label?: string;
